--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,6 @@ body {
     font-family: cursive;
     margin-top: -170px;
 }
-/*
-.imagen_cultivador {
-    margin-top: -150px;
-}
-*/
 #nav_titulo{
     color: darkorange;
     margin-left: auto;
@@ -71,4 +66,15 @@ body {
     color: white;
     position: absolute;
     margin-left: 46.5%;
+  }
+  .main-container {
+    margin-top: -43%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 80%;
+    margin-right: 25%;
+  }
+  canvas {
+    background-color: #fff;
   }
